# Robotika

./: Week1
UAS Week 15/: ReadMe.txt
UTS/: Skrip.docx
UTS/wallfollower/protos/: WorldMaze.proto  WorldMaze.txt
UTS/wallfollower/worlds/: wallfollower.wbt
Week 10/kode/: camera.py
Week 10/tugas-tugas google colab/: !LINK GOOGLE COLABS.txt  link colabs.txt
Week 10/world/: Universal Robot.wbt  catatan.txt  visual_tracking.wbt  warehouse.wbt
Week 11/Collabs/: Link Collabs.txt
Week 12/Collabs/: Link Collabs.txt
Week 12/Webots/: ReadMe.txt
Week 13/Analisis di Collabs/: Link Collabs.txt
Week 2/Video 1/: ros command.txt
Week 2/Video 2,3,4/: source code.txt
Week 2/Video 2,3,4/ros2_ws source code/install/my_python_package/share/my_python_package/: package.sh  package.xml
Week 3/Tugas 1/: kode python 1.txt
Week 3/Tugas 2/: kode python 2.txt
Week 3/Tugas 3/: kode python 3.txt
Week 3/worlds/: arena1.wbt
Week 4/: Analisis Tugas Robotika Week 4_Rafli Limandijaya.docx
Week 4/Install Moveit/: install moveit command.txt
Week 4/RVIZ + C++/: code cpp.txt  command line.txt
Week 4/RVIZ manual/: membuka rviz command.txt
Week 5/: Analisis Tugas Robotika Week 5_Rafli Limandijaya.docx  a star code.txt  cell decompotition.txt  command line.txt  dijkstra code.txt
Week 6/matplotlib/: command line.txt
Week 6/rviz/: command line.txt
Week 7/: Analisis Tugas Robotika Week 7_Rafli Limandijaya.docx  tolong dibaca
Week 7/kode/: jetbot_basic_motion.c  jetbot_collision_avoidance.py
Week 7/nvidia-jetbot-collision-avoidance/: README.md
(+81 files in other folders)
