<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_python_package</name>
  <version>0.0.0</version>
  <description>This is a Python package for ROS 2.</description>

  <maintainer email="rafli@todo.todo">Rafli</maintainer>
  <license>Apache 2.0</license>

  <!-- Build and execution dependencies -->
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Test dependencies (optional, can be removed if not needed) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
